[package]
name = "libp2p-streaming-response"
edition = "2018"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
derive_more = "0.99.11"
futures = "0.3.12"
libp2p-core = { version = "0.28.0", path = "../../core" }
libp2p-swarm = { version = "0.29.0", path = "../../swarm" }
serde = { version = "1.0.120", features = ["derive"] }
serde_cbor = "0.11.1"
thiserror = "1.0.23"
